--- a/requirements.txt
+++ b/requirements.txt
@@ -1,166 +1,166 @@
-adyen==4.0.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-amqp==5.1.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-aniso8601==7.0.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-anyio==3.6.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-asgiref==3.6.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-async-timeout==4.0.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-authlib==1.2.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-authorizenet==1.1.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-azure-common==1.1.28 ; python_version >= "3.9" and   python_version < “3.10.7”
-azure-core==1.26.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-azure-storage-blob==12.16.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-azure-storage-common==2.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-babel==2.12.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-bcrypt==4.0.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-beautifulsoup4==4.7.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-billiard==3.6.4.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-boto3==1.26.120 ; python_version >= "3.9" and   python_version < “3.10.7”
-botocore==1.29.120 ; python_version >= "3.9" and   python_version < “3.10.7”
-braintree==4.19.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-brotli==1.0.9 ; platform_python_implementation == "CPython" and python_version >= "3.9" and   python_version < “3.10.7”
-brotlicffi==1.0.9.2 ; platform_python_implementation != "CPython" and python_version >= "3.9" and   python_version < “3.10.7”
-cachetools==5.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-celery==5.2.7 ; python_version >= "3.9" and   python_version < “3.10.7”
-celery[redis]==5.2.7 ; python_version >= "3.9" and   python_version < “3.10.7”
-certifi==2022.12.7 ; python_version >= "3.9" and   python_version < “3.10.7”
-cffi==1.15.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-charset-normalizer==3.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-click-didyoumean==0.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-click-plugins==1.1.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-click-repl==0.2.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-click==8.1.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-colorama==0.4.6 ; python_version >= "3.9" and   python_version < “3.10.7” and sys_platform == "win32" or python_version >= "3.9" and   python_version < “3.10.7” and platform_system == "Windows"
-cron-descriptor==1.2.35 ; python_version >= "3.9" and   python_version < “3.10.7”
-cryptography==39.0.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-cssselect2==0.7.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-dj-database-url==1.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-dj-email-url==1.0.6 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-appconf==1.0.5 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-cache-url==3.4.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-celery-beat==2.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-countries==7.5.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-filter==23.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-js-asset==2.0.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-measurement==3.2.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-mptt==0.14.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-phonenumber-field==7.0.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-prices-openexchangerates==1.2.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-prices-vatlayer==1.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-prices==2.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-redis==5.2.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-storages[google]==1.13.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-stubs-ext==0.8.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-timezone-field==5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django-versatileimagefield==3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-django==3.2.18 ; python_version >= "3.9" and   python_version < “3.10.7”
-django[bcrypt]==3.2.18 ; python_version >= "3.9" and   python_version < “3.10.7”
-draftjs-sanitizer==1.0.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-enmerkar==0.7.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-et-xmlfile==1.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-faker==18.5.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-fonttools[woff]==4.39.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-freezegun==1.2.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-api-core==2.11.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-api-core[grpc]==2.11.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-auth==2.17.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-cloud-core==2.3.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-cloud-pubsub==2.16.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-cloud-storage==2.8.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-crc32c==1.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-i18n-address==2.5.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-measurement-protocol==1.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-google-resumable-media==2.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-googleapis-common-protos==1.59.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-googleapis-common-protos[grpc]==1.59.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-graphene==2.1.9 ; python_version >= "3.9" and   python_version < “3.10.7”
-graphql-core==2.3.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-graphql-relay==2.0.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-grpc-google-iam-v1==0.12.6 ; python_version >= "3.9" and   python_version < “3.10.7”
-grpcio-status==1.54.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-grpcio==1.54.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-gunicorn==20.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-h11==0.14.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-html-to-draftjs==1.0.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-html2text==2020.1.16 ; python_version >= "3.9" and   python_version < “3.10.7”
-html5lib==1.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-httptools==0.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-idna==3.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-importlib-metadata==6.6.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-isodate==0.6.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-jaeger-client==4.8.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-jmespath==1.0.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-jsonfield==3.1.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-kombu==5.2.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-lxml==4.9.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-markdown==3.4.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-measurement==3.2.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-micawber==0.5.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-mpmath==1.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-oauthlib==3.2.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-openpyxl==3.1.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-opentracing==2.4.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-petl==1.7.12 ; python_version >= "3.9" and   python_version < “3.10.7”
-phonenumberslite==8.13.10 ; python_version >= "3.9" and   python_version < “3.10.7”
-pillow-avif-plugin==1.3.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-pillow==9.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-posuto==2023.4.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-prices==1.1.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-promise==2.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-prompt-toolkit==3.0.38 ; python_version >= "3.9" and   python_version < “3.10.7”
-proto-plus==1.22.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-protobuf==4.22.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-psycopg2==2.9.6 ; python_version >= "3.9" and   python_version < “3.10.7”
-pyasn1-modules==0.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-pyasn1==0.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-pybars3==0.9.7 ; python_version >= "3.9" and   python_version < “3.10.7”
-pycparser==2.21 ; python_version >= "3.9" and   python_version < “3.10.7”
-pydyf==0.6.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-pyjwt==2.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-pymeta3==0.5.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-pyphen==0.14.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-python-crontab==2.7.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-python-dateutil==2.8.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-python-dotenv==1.0.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-python-http-client==3.3.7 ; python_version >= "3.9" and   python_version < “3.10.7”
-python-json-logger==2.0.7 ; python_version >= "3.9" and   python_version < “3.10.7”
-python-magic-bin==0.4.14 ; python_version >= "3.9" and   python_version < “3.10.7” and sys_platform == "win32"
-python-magic==0.4.27 ; python_version >= "3.9" and   python_version < “3.10.7”
-pytimeparse==1.1.8 ; python_version >= "3.9" and   python_version < “3.10.7”
-pytz==2023.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-pyxb==1.2.5 ; python_version >= "3.9" and   python_version < “3.10.7”
-pyyaml==6.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-razorpay==1.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-redis==4.5.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-requests==2.28.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-rsa==4.9 ; python_version >= "3.9" and   python_version < “3.10.7”
-rx==1.6.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-s3transfer==0.6.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-semantic-version==2.10.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-sendgrid==6.10.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-sentry-sdk==1.21.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-setuptools==67.7.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-six==1.16.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-sniffio==1.3.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-soupsieve==2.4.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-sqlparse==0.4.4 ; python_version >= "3.9" and   python_version < “3.10.7”
-starkbank-ecdsa==2.2.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-stripe==3.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-sympy==1.11.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-text-unidecode==1.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-threadloop==1.0.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-thrift==0.16.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-tinycss2==1.2.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-tornado==6.3.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-typing-extensions==4.5.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-tzdata==2023.3 ; python_version >= "3.9" and   python_version < “3.10.7”
-urllib3==1.26.15 ; python_version >= "3.9" and   python_version < “3.10.7”
-uvicorn[standard]==0.19.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-uvloop==0.17.0 ; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.9" and   python_version < “3.10.7”
-vine==5.0.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-watchfiles==0.19.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-wcwidth==0.2.6 ; python_version >= "3.9" and   python_version < “3.10.7”
-weasyprint==58.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-webencodings==0.5.1 ; python_version >= "3.9" and   python_version < “3.10.7”
-websockets==11.0.2 ; python_version >= "3.9" and   python_version < “3.10.7”
-zipp==3.15.0 ; python_version >= "3.9" and   python_version < “3.10.7”
-zopfli==0.2.2 ; python_version >= "3.9" and   python_version < “3.10.7”
+adyen==4.0.0 ; 
+amqp==5.1.1 ; 
+aniso8601==7.0.0 ; 
+anyio==3.6.2 ; 
+asgiref==3.6.0 ; 
+async-timeout==4.0.2 ; 
+authlib==1.2.0 ; 
+authorizenet==1.1.4 ; 
+azure-common==1.1.28 ; 
+azure-core==1.26.4 ; 
+azure-storage-blob==12.16.0 ; 
+azure-storage-common==2.1.0 ; 
+babel==2.12.1 ; 
+bcrypt==4.0.1 ; 
+beautifulsoup4==4.7.1 ; 
+billiard==3.6.4.0 ; 
+boto3==1.26.120 ; 
+botocore==1.29.120 ; 
+braintree==4.19.0 ; 
+brotli==1.0.9 ; platform_python_implementation == "CPython" and 
+brotlicffi==1.0.9.2 ; platform_python_implementation != "CPython" and 
+cachetools==5.3.0 ; 
+celery==5.2.7 ; 
+celery[redis]==5.2.7 ; 
+certifi==2022.12.7 ; 
+cffi==1.15.1 ; 
+charset-normalizer==3.1.0 ; 
+click-didyoumean==0.3.0 ; 
+click-plugins==1.1.1 ; 
+click-repl==0.2.0 ; 
+click==8.1.3 ; 
+colorama==0.4.6 ;  and sys_platform == "win32" or  and platform_system == "Windows"
+cron-descriptor==1.2.35 ; 
+cryptography==39.0.2 ; 
+cssselect2==0.7.0 ; 
+dj-database-url==1.3.0 ; 
+dj-email-url==1.0.6 ; 
+django-appconf==1.0.5 ; 
+django-cache-url==3.4.4 ; 
+django-celery-beat==2.5.0 ; 
+django-countries==7.5.1 ; 
+django-filter==23.1 ; 
+django-js-asset==2.0.0 ; 
+django-measurement==3.2.4 ; 
+django-mptt==0.14.0 ; 
+django-phonenumber-field==7.0.2 ; 
+django-prices-openexchangerates==1.2.0 ; 
+django-prices-vatlayer==1.1.0 ; 
+django-prices==2.3.0 ; 
+django-redis==5.2.0 ; 
+django-storages[google]==1.13.2 ; 
+django-stubs-ext==0.8.0 ; 
+django-timezone-field==5.0 ; 
+django-versatileimagefield==3.0 ; 
+django==3.2.18 ; 
+django[bcrypt]==3.2.18 ; 
+draftjs-sanitizer==1.0.0 ; 
+enmerkar==0.7.1 ; 
+et-xmlfile==1.1.0 ; 
+faker==18.5.1 ; 
+fonttools[woff]==4.39.3 ; 
+freezegun==1.2.2 ; 
+google-api-core==2.11.0 ; 
+google-api-core[grpc]==2.11.0 ; 
+google-auth==2.17.3 ; 
+google-cloud-core==2.3.2 ; 
+google-cloud-pubsub==2.16.0 ; 
+google-cloud-storage==2.8.0 ; 
+google-crc32c==1.5.0 ; 
+google-i18n-address==2.5.2 ; 
+google-measurement-protocol==1.1.0 ; 
+google-resumable-media==2.5.0 ; 
+googleapis-common-protos==1.59.0 ; 
+googleapis-common-protos[grpc]==1.59.0 ; 
+graphene==2.1.9 ; 
+graphql-core==2.3.2 ; 
+graphql-relay==2.0.1 ; 
+grpc-google-iam-v1==0.12.6 ; 
+grpcio-status==1.54.0 ; 
+grpcio==1.54.0 ; 
+gunicorn==20.1.0 ; 
+h11==0.14.0 ; 
+html-to-draftjs==1.0.1 ; 
+html2text==2020.1.16 ; 
+html5lib==1.1 ; 
+httptools==0.5.0 ; 
+idna==3.4 ; 
+importlib-metadata==6.6.0 ; 
+isodate==0.6.1 ; 
+jaeger-client==4.8.0 ; 
+jmespath==1.0.1 ; 
+jsonfield==3.1.0 ; 
+kombu==5.2.4 ; 
+lxml==4.9.2 ; 
+markdown==3.4.3 ; 
+measurement==3.2.2 ; 
+micawber==0.5.4 ; 
+mpmath==1.3.0 ; 
+oauthlib==3.2.2 ; 
+openpyxl==3.1.2 ; 
+opentracing==2.4.0 ; 
+petl==1.7.12 ; 
+phonenumberslite==8.13.10 ; 
+pillow-avif-plugin==1.3.1 ; 
+pillow==9.5.0 ; 
+posuto==2023.4.0 ; 
+prices==1.1.1 ; 
+promise==2.3 ; 
+prompt-toolkit==3.0.38 ; 
+proto-plus==1.22.2 ; 
+protobuf==4.22.3 ; 
+psycopg2==2.9.6 ; 
+pyasn1-modules==0.3.0 ; 
+pyasn1==0.5.0 ; 
+pybars3==0.9.7 ; 
+pycparser==2.21 ; 
+pydyf==0.6.0 ; 
+pyjwt==2.5.0 ; 
+pymeta3==0.5.1 ; 
+pyphen==0.14.0 ; 
+python-crontab==2.7.1 ; 
+python-dateutil==2.8.2 ; 
+python-dotenv==1.0.0 ; 
+python-http-client==3.3.7 ; 
+python-json-logger==2.0.7 ; 
+python-magic-bin==0.4.14 ;  and sys_platform == "win32"
+python-magic==0.4.27 ; 
+pytimeparse==1.1.8 ; 
+pytz==2023.3 ; 
+pyxb==1.2.5 ; 
+pyyaml==6.0 ; 
+razorpay==1.3.0 ; 
+redis==4.5.4 ; 
+requests==2.28.2 ; 
+rsa==4.9 ; 
+rx==1.6.3 ; 
+s3transfer==0.6.0 ; 
+semantic-version==2.10.0 ; 
+sendgrid==6.10.0 ; 
+sentry-sdk==1.21.0 ; 
+setuptools==67.7.2 ; 
+six==1.16.0 ; 
+sniffio==1.3.0 ; 
+soupsieve==2.4.1 ; 
+sqlparse==0.4.4 ; 
+starkbank-ecdsa==2.2.0 ; 
+stripe==3.5.0 ; 
+sympy==1.11.1 ; 
+text-unidecode==1.3 ; 
+threadloop==1.0.2 ; 
+thrift==0.16.0 ; 
+tinycss2==1.2.1 ; 
+tornado==6.3.1 ; 
+typing-extensions==4.5.0 ; 
+tzdata==2023.3 ; 
+urllib3==1.26.15 ; 
+uvicorn[standard]==0.19.0 ; 
+uvloop==0.17.0 ; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and 
+vine==5.0.0 ; 
+watchfiles==0.19.0 ; 
+wcwidth==0.2.6 ; 
+weasyprint==58.1 ; 
+webencodings==0.5.1 ; 
+websockets==11.0.2 ; 
+zipp==3.15.0 ; 
+zopfli==0.2.2 ; 
